nuevas modificaciones terminadas1

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>Lorem ipsum dolor sit amet.</p>
    <h2>git hub</h2>
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, ex.</p>
+   <h2>GIT</h2>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, cupiditate, quaerat! Veritatis, nesciunt, nobis! Minima.</p>
   </body>
 </html>
