--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, ex.</p>
    <h2>GIT</h2>
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, cupiditate, quaerat! Veritatis, nesciunt, nobis! Minima.</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quaerat deleniti assumenda vitae veritatis excepturi? Officiis a facere, quia iure!</p>
   </body>
 </html>
