--- a/ProjectOne/index.html
+++ b/ProjectOne/index.html
@@ -6,15 +6,43 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
-    <h1>up and Running with Bootstrap</h1>
-    <h2>The Fastest Way to Learn Bootstrap</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam sequi, officiis suscipit soluta aperiam qui magni et incidunt cum quia!</p>
-    <h3>Book Today!</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quia ut dolorum possimus ex in.</p>
-    <h3>Go AnyWhere</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum consequuntur totam dolorum laboriosam, vel eveniet.</p>
-    <h3>Rocket Bus&reg;</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque rem ducimus at architecto aperiam eum?</p>
+    <div class="container">
+
+    <div class="row">
+        <div class="col-md-12">
+          <h1>Up and Running with Bootstrap</h1>
+        </div>
+    </div>
+    <!-- /.row -->
+      <div class="row">
+        <div class="col-md-6">
+          <h2>The Fastest Way to Learn Bootstrap</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam sequi, officiis suscipit soluta aperiam qui magni et incidunt cum quia!</p>
+        </div>
+
+      </div>
+      <!-- /.row -->
+    <div class="row">
+      <div class="col-md-4 col-sm-12 col-12">
+        <h3>Book Today!</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quia ut dolorum possimus ex in.</p>
+      </div>
+
+
+      <div class="col-md-4 col-sm-6 col-6">
+        <h3>Go AnyWhere</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum consequuntur totam dolorum laboriosam, vel eveniet.</p>
+      </div>
+      <!-- /.col-md-4 -->
+    <div class="col-md-4 col-sm-6 col-6">
+      <h3>Rocket Bus&reg;</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque rem ducimus at architecto aperiam eum?</p>
+    </div>
+    <!-- /.col-md-4 -->
+    </div>
+    <!-- /.row -->
+    </div>
+    <!-- /.container -->
 
 
 
