--- a/ProjectOne/index.html
+++ b/ProjectOne/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Up and Running with Bootstrap</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/fontawesome/web-fonts-with-css/css/fontawesome-all.css">
   </head>
   <body>
     <div class="container">
@@ -14,29 +15,39 @@
         </div>
     </div>
     <!-- /.row -->
-      <div class="row">
+      <div class="row bg-light p-md-5 p-3 border rounded m-md-3 m-2 ">
         <div class="col-md-6">
-          <h2>The Fastest Way to Learn Bootstrap</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam sequi, officiis suscipit soluta aperiam qui magni et incidunt cum quia!</p>
+          <h2>The Fastest Way to Learn Boostrap</h2>
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam sequi, officiis suscipit soluta aperiam qui magni et incidunt cum quia!</p>
+          <button type="button" name="button" class="btn btn-primary btn-lg"> Take the tour </button>
+          <button type="button" name="button" class="btn btn-success btn-lg"> Book tickets Now! </button>
+
+        </div>
+        <div class="col-md-6 d-none d-sm-block">
+          <img src="img/logonegroSYK.jpg" alt="" width="300" alt="">
         </div>
 
       </div>
       <!-- /.row -->
-    <div class="row">
+    <div class="row  text-center" c>
+
       <div class="col-md-4 col-sm-12 col-12">
+        <i class="fas fa-briefcase"></i>
         <h3>Book Today!</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quia ut dolorum possimus ex in.</p>
       </div>
 
 
       <div class="col-md-4 col-sm-6 col-6">
+        <i class="fas fa-random"></i>
         <h3>Go AnyWhere</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum consequuntur totam dolorum laboriosam, vel eveniet.</p>
       </div>
       <!-- /.col-md-4 -->
     <div class="col-md-4 col-sm-6 col-6">
+      <i class="fas fa-rocket"></i>
       <h3>Rocket Bus&reg;</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque rem ducimus at architecto aperiam eum?</p>
+      <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque rem ducimus at architecto aperiam eum?</p>
     </div>
     <!-- /.col-md-4 -->
     </div>
