--- a/ProjectOne/index.html
+++ b/ProjectOne/index.html
@@ -5,6 +5,7 @@
     <title>Up and Running with Bootstrap</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/fontawesome/web-fonts-with-css/css/fontawesome-all.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div class="container">
@@ -29,7 +30,7 @@
 
       </div>
       <!-- /.row -->
-    <div class="row  text-center" c>
+    <div class="row  text-center features" c>
 
       <div class="col-md-4 col-sm-12 col-12">
         <i class="fas fa-briefcase"></i>
@@ -54,6 +55,39 @@
     <!-- /.row -->
     </div>
     <!-- /.container -->
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h4>Who we are</h4>
+            <p>Up and running with bootstrap</p>
+            <p><a href="">More about us <i class="fas fa-arrow-right"></i></a></p>
+          </div>
+          <div class="col-md-2">
+            <h4>Links</h4>
+            <ul class="list-unstyled">
+              <li>Home</li>
+              <li>Tickets</li>
+              <li>Stations</li>
+            </ul>
+          </div>
+          <div class="col-md-2">
+            <h4>Stay in touch</h4>
+            <ul class="list-unstyled">
+              <li>About <i class="fas fa-building"></i></li>
+              <li>Contact Us <i class="fas fa-user"></i></li>
+              <li>Blog <i class="fab fa-blogger"></i></li>
+              <li>Twitter <i class="fab fa-twitter"></i></li>
+              <li>Facebook <i class="fab fa-facebook-square"></i></li>
+            </ul>
+          </div>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.footer -->
+
 
 
 
