--- a/ProjectOne/index.html
+++ b/ProjectOne/index.html
@@ -58,27 +58,35 @@
     <div class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md3 col-sm-4 col-6">
             <h4>Who we are</h4>
             <p>Up and running with bootstrap</p>
             <p><a href="">More about us <i class="fas fa-arrow-right"></i></a></p>
           </div>
-          <div class="col-md-2">
+          <div class="offset-md-1 col-sm-2 col-6">
             <h4>Links</h4>
             <ul class="list-unstyled">
-              <li>Home</li>
-              <li>Tickets</li>
-              <li>Stations</li>
+              <li><a href="">Home</a></li>
+              <li><a href="">Ticket</a></li>
+              <li><a href="">Stations</a></li>
             </ul>
           </div>
-          <div class="col-md-2">
+          <div class=" col-sm-2 col-6">
             <h4>Stay in touch</h4>
             <ul class="list-unstyled">
-              <li>About <i class="fas fa-building"></i></li>
-              <li>Contact Us <i class="fas fa-user"></i></li>
-              <li>Blog <i class="fab fa-blogger"></i></li>
-              <li>Twitter <i class="fab fa-twitter"></i></li>
-              <li>Facebook <i class="fab fa-facebook-square"></i></li>
+              <li><a href="">About <i class="fas fa-building"></a></i></li>
+              <li><a href="">Contact Us <i class="fas fa-user"></a></i></li>
+              <li><a href="">Blog <i class="fab fa-blogger"></a></i></li>
+              <li><a href="">Twitter <i class="fab fa-twitter"></a></i></li>
+              <li><a href="">Facebook <i class="fab fa-facebook-square"></a></i></li>
+            </ul>
+          </div>
+          <div class="col-md-3 offset-md-1 col-sm-4 col-6">
+            <h4>Contact Us</h4>
+            <ul class="list-unstyled">
+              <li><a href="">Tehuacan, Puebla <i class="fas fa-map-marker-alt"></i></a></li>
+              <li><a href="">2382185150  <i class="fas fa-mobile-alt"></i></a></li>
+              <li><a href="">nallemttz@gmail.com <i class="fas fa-at"></i></a></li>
             </ul>
           </div>
         </div>
