--- a/ProjectTwo/index.html
+++ b/ProjectTwo/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- se agrega la libreria de bootstrap js-->
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <!-- seagrega la libreria de jquery para que boostrap js funcione -->
+  <!-- seagrega la libreria de jquery para que bootstrap js funcione -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
 </body>
 </html>
