--- a/ProjectTwo/index.html
+++ b/ProjectTwo/index.html
@@ -11,9 +11,33 @@
   <link rel="stylesheet" href="bower_components/fontawesome/web-fonts-with-css/css/fontawesome-all.css">
 </head>
 <body>
+  <!--barra de navegacion -->
+<nav class="navbar navbar-expand-md navbar-light fixed-top navbar navbar-light " style="background-color: #e3f2fd;">
+  <a href="index.html" class="navbar-brand">Company Logo</a>
+  <button class="navbar-toggler" data-toggle="collapse" data-target="#navegacion">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div id="navegacion" class="justify-content-end collapse navbar-collapse">
+    <ul class="navbar-nav">
+     <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+     <li class="nav-item"><a href="Products.html" class="nav-link">Products</a></li>
+     <li class="nav-item"><a href="about.html.html" class="nav-link">About Us</a></li>
+     <li class="nav-item"><a href="contact.htlm" class="nav-link">Contact Us</a></li>
+     <li class="nav-item">
+       <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+      </form>
+     </li>
+    </ul>
+
+  </div>
+</nav>
+
   <!-- se agrega la libreria de bootstrap js-->
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <!-- seagrega la libreria de jquery para que bootstrap js funcione -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
+  <!-- seagrega la libreria de jquery para que bootstrap js funcione -->
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
 </body>
 </html>
