--- a/ProjectTwo/index.html
+++ b/ProjectTwo/index.html
@@ -38,6 +38,18 @@
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <!-- seagrega la libreria de jquery para que bootstrap js funcione -->
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="bower_components/hammerjs/hammer.js"></script>
+  <script>
+  var $body = document.body;
+  var hammertime = new Hammer($body);
+hammertime.on('swipeleft', function(ev) {
+console.log(ev);
+});
+hammertime.on('swiperight', function(ev) {
+console.log(ev);
+});
+
+  </script>
 
 </body>
 </html>
