--- a/ProjectTwo/index.html
+++ b/ProjectTwo/index.html
@@ -51,7 +51,73 @@
     </div>
   </div>
   <hr>
+  <div class="row">
+
+    <div class="col-md-8">
+      <h3>The Company</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, libero itaque quisquam. Illum labore debitis minus provident nam doloribus, omnis excepturi repellendus molestias fuga. Delectus nostrum odit id facere voluptates atque unde, consequatur corrupti molestiae quas cumque doloremque, in voluptatem, esse voluptate voluptas distinctio nisi totam. Exercitationem ut, eligendi ab.</p>
+  </div>
+  <div class="col-md-4">
+    <p class="bg-light rounded lead text-center p-md-5">
+      Our Motto
+    </p>
+  </div>
 </div>
+
+  <!-- /.row -->
+  <hr>
+  <div class="row">
+    <h3>Testimonials</h3>
+    <div class="col-md-12 text-center">
+    <div class="carousel slide" id="carouselTestimonios" data-ride"carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <blockquote class="blockquote">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo consequuntur harum voluptate fugiat aut, vel rem, praesentium placeat inventore odit!</p>
+            <footer class="blockquote-footer">
+              Ozkar Zevach
+            </footer>
+          </blockquote>
+        </div>
+        <div class="carousel-item">
+          <blockquote class="blockquote">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo consequuntur harum voluptate fugiat aut, vel rem, praesentium placeat inventore odit!</p>
+            <footer class="blockquote-footer">
+              Karina
+            </footer>
+          </blockquote>
+        </div>
+        <div class="carousel-item">
+          <blockquote class="blockquote">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo consequuntur harum voluptate fugiat aut, vel rem, praesentium placeat inventore odit!</p>
+            <footer class="blockquote-footer">
+             Zevach
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+      <!-- /.carousel-inner -->
+    </div>
+    <hr>
+    </div>
+    <!-- /.col -->
+    <div class="footer col-md-12">
+      <p class="text-center lead">
+        Wanna get in touch? Email us at nallemttz@gmail.com
+      </p>
+      <hr>
+      <ul class="list-unstyled text-center">
+        <li class="list-inline-item"><a href=""><i class="fab fa-twitter fa-2x fa-lg"></i></a></li>
+        <li class="list-inline-item"><a href=""><i class="fab fa-facebook-square fa-2x fa-lg"></i></a></li>
+        <li class="list-inline-item"><a href=""><i class="fab fa-linkedin fa-2x fa-lg"></i></a></li>
+
+      </ul>
+    </div>
+    <!-- /.footer -->
+  </div>
+  <!-- /.row -->
+</div>
+
   <!-- se agrega la libreria de bootstrap js-->
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <!-- seagrega la libreria de jquery para que bootstrap js funcione -->
