--- a/ProjectTwo/about.html
+++ b/ProjectTwo/about.html
@@ -23,7 +23,7 @@
     <ul class="navbar-nav">
      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
      <li class="nav-item"><a href="Products.html" class="nav-link">Products</a></li>
-     <li class="nav-item"><a href="about.html.html" class="nav-link">About Us</a></li>
+     <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
      <li class="nav-item"><a href="#" class="nav-link" data-toggle="modal" data-target="#modal-contact-form">Contact Us</a></li>
      <li class="nav-item">
        <form class="form-inline my-2 my-lg-0">
@@ -35,72 +35,34 @@
 
   </div>
 </nav>
+
 <div class="container">
+  <nav area-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="#">About Us</a></li>
+    </ol>
+  </nav>
   <div class="row">
-    <div class="col-md-4">
-      <h1>Featured Product</h1>
-      <p>Lorem ipsum dolor sit amet.</p>
-      <div class="btn-group btn-group-lg">
-        <button class="btn btn-info">Buy Now!</button>
-        <button class="btn btn-default">Free Trial</button>
-      </div>
-      <p><a href="#">Read more about the product</a></p>
-    </div>
-    <div class="col-md-8 d-none d-sm-block">
-      <img src="img/expresarte1.jpg" alt="" width="750px" height="200px">
-    </div>
+    <h1>About Us. <small class="text-muted">Who we are</small></h1>
   </div>
   <hr>
   <div class="row">
-
     <div class="col-md-8">
       <h3>The Company</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, libero itaque quisquam. Illum labore debitis minus provident nam doloribus, omnis excepturi repellendus molestias fuga. Delectus nostrum odit id facere voluptates atque unde, consequatur corrupti molestiae quas cumque doloremque, in voluptatem, esse voluptate voluptas distinctio nisi totam. Exercitationem ut, eligendi ab.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, impedit dolorum labore a repudiandae excepturi voluptate quibusdam libero dicta itaque rem, quod magnam natus obcaecati nisi quos cumque fuga beatae accusamus corporis magni voluptatum. Nostrum asperiores magni qui, fugiat ipsam soluta velit quis assumenda nihil est eum alias repellat omnis.</p>
+    </div>
+    <div class="col-md-4">
+      <p class="bg-light rounded lead text-center p-md-5 m-md-4">
+      Our Motto</p>
+    </div>
   </div>
-  <div class="col-md-4">
-    <p class="bg-light rounded lead text-center p-md-5">
-      Our Motto
-    </p>
-  </div>
+
 </div>
 
-  <!-- /.row -->
-  <hr>
-  <div class="row">
-    <h3>Testimonials</h3>
-    <div class="col-md-12 text-center">
-    <div class="carousel slide" id="carouselTestimonios" data-ride"carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <blockquote class="blockquote">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo consequuntur harum voluptate fugiat aut, vel rem, praesentium placeat inventore odit!</p>
-            <footer class="blockquote-footer">
-              Ozkar Zevach
-            </footer>
-          </blockquote>
-        </div>
-        <div class="carousel-item">
-          <blockquote class="blockquote">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo consequuntur harum voluptate fugiat aut, vel rem, praesentium placeat inventore odit!</p>
-            <footer class="blockquote-footer">
-              Karina
-            </footer>
-          </blockquote>
-        </div>
-        <div class="carousel-item">
-          <blockquote class="blockquote">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo consequuntur harum voluptate fugiat aut, vel rem, praesentium placeat inventore odit!</p>
-            <footer class="blockquote-footer">
-             Zevach
-            </footer>
-          </blockquote>
-        </div>
-      </div>
-      <!-- /.carousel-inner -->
-    </div>
-    <hr>
-    </div>
-    <!-- /.col -->
+
+<div class="container">
+
     <div class="footer col-md-12">
       <p class="text-center lead">
         Wanna get in touch? Email us at nallemttz@gmail.com
