--- a/ProjectTwo/index.html
+++ b/ProjectTwo/index.html
@@ -23,7 +23,7 @@
     <ul class="navbar-nav">
      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
      <li class="nav-item"><a href="Products.html" class="nav-link">Products</a></li>
-     <li class="nav-item"><a href="about.html.html" class="nav-link">About Us</a></li>
+     <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
      <li class="nav-item"><a href="#" class="nav-link" data-toggle="modal" data-target="#modal-contact-form">Contact Us</a></li>
      <li class="nav-item">
        <form class="form-inline my-2 my-lg-0">
@@ -58,7 +58,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, libero itaque quisquam. Illum labore debitis minus provident nam doloribus, omnis excepturi repellendus molestias fuga. Delectus nostrum odit id facere voluptates atque unde, consequatur corrupti molestiae quas cumque doloremque, in voluptatem, esse voluptate voluptas distinctio nisi totam. Exercitationem ut, eligendi ab.</p>
   </div>
   <div class="col-md-4">
-    <p class="bg-light rounded lead text-center p-md-5">
+    <p class="bg-light rounded lead text-center p-md-5 m-md-3">
       Our Motto
     </p>
   </div>
