--- a/ProjectTwo/about.html
+++ b/ProjectTwo/about.html
@@ -57,7 +57,30 @@
       Our Motto</p>
     </div>
   </div>
+<hr>
+<div class="row ">
+  <h3>The Team</h3>
+</div>
+<div class="row">
+  <div class="card col-md-5">
+    <img src="img/demo-team-member.jpg" alt="" class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">John Doe</h5>
+      <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, sunt?</p>
+      <a href=""><i class="fab fa-twitter fa-2x fa-lg"></i></a>
+      <a href=""><i class="fab fa-facebook-square fa-2x fa-lg"></i></a>
+    </div>
+  </div>
+  <div class="card col-md-5 offset-md-2">
+    <img src="img/demo-team-member.jpg" alt="" class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">John Doe</h5>
+      <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, sunt?</p>
+      <a href=""><i class="fab fa-twitter fa-2x fa-lg"></i></a>
+      <a href=""><i class="fab fa-facebook-square fa-2x fa-lg"></i></a>
+    </div>
 
+</div>
 </div>
 
 
