--- a/ProjectTwo/products.html
+++ b/ProjectTwo/products.html
@@ -23,7 +23,7 @@
     <ul class="navbar-nav">
      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
      <li class="nav-item"><a href="Products.html" class="nav-link">Products</a></li>
-     <li class="nav-item"><a href="about.html.html" class="nav-link">About Us</a></li>
+     <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
      <li class="nav-item"><a href="#" class="nav-link" data-toggle="modal" data-target="#modal-contact-form">Contact Us</a></li>
      <li class="nav-item">
        <form class="form-inline my-2 my-lg-0">
@@ -52,7 +52,7 @@
     <div class="card col-md-4">
       <img src="img/1.jpg" alt="" class="card-img-top">
       <div class="card-body">
-        <h5 class="card title">Product 1</h5>
+        <h5 class="card-title">Product 1</h5>
         <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, sunt?</p>
         <a href="product-single.html" class="btn btn-primary">Ver mas...</a>
       </div>
@@ -61,7 +61,7 @@
     <div class="card col-md-4">
       <img src="img/2.jpg" alt="" class="card-img-top">
       <div class="card-body">
-        <h5 class="card title">Product 2</h5>
+        <h5 class="card-title">Product 2</h5>
         <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, sunt?</p>
         <a href="product-single.html" class="btn btn-primary">Ver mas...</a>
       </div>
