--- a/ProjectTwo/product-single.html
+++ b/ProjectTwo/product-single.html
@@ -64,16 +64,33 @@
     </div>
   </div>
   <div class="row">
-    <div class="carousel slide " id="carousel-product" data-ride="carousel">
+    <div class="carousel slide " id="carousel-product" data-ride="carousel" >
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-product" data-slide-to="1" ></li>
+        <li data-target="#carousel-product" data-slide-to="2" ></li>
+      </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/large1.jpg" alt="" class="d-block w-100">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Picture One</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, repellat!</p>
+          </div>
         </div>
         <div class="carousel-item ">
             <img src="img/large2.jpg" alt="" class="d-block w-100">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Picture Two</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, repellat!</p>
+            </div>
         </div>
         <div class="carousel-item ">
             <img src="img/large3.jpg" alt="" class="d-block w-100">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Picture Three</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, repellat!</p>
+            </div>
         </div>
         </div>
         <a href="#carousel-product" class="carousel-control-prev" data-slide="prev" role=button>
@@ -84,14 +101,37 @@
       </a>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Product</h3>
+        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur minus quia, eos! Laudantium architecto quidem neque necessitatibus perferendis quos tempora, quae aut perspiciatis odio, laboriosam saepe autem, culpa sunt sint! Magnam perspiciatis ipsam obcaecati similique nam porro illo, sunt totam voluptates quod, impedit dolorem. Magni.</p>
+      </div>
+      <div class="col-md-6">
+        <h3>Product Testimonials</h3>
+        <blockquote class="blockquote text-justify">
+          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis commodi, eveniet aliquam. At, consequuntur optio, aspernatur aperiam ut ab libero.</p>
+          <footer class="blockquote-footer">Nallely</footer>
+        </blockquote>
+      </div>
+    </div>
+    <hr>
+
+    <div class="row">
+      <div>
+        <button class="btn btn-outline-primary ">
+          Previous product
+        </button>
+        <button class="btn btn-outline-primary ">
+          Next product
+        </button>
+      </div>
+    </div>
   </div>
 
 
 
   <hr>
   <div class="row">
-
-
     <div class="footer col-md-12">
       <p class="text-center lead">
         Wanna get in touch? Email us at nallemttz@gmail.com
