--- a/ProjectTwo/product-single.html
+++ b/ProjectTwo/product-single.html
@@ -117,14 +117,18 @@
     <hr>
 
     <div class="row">
-      <div>
-        <button class="btn btn-outline-primary ">
-          Previous product
-        </button>
-        <button class="btn btn-outline-primary ">
-          Next product
+      <div class="d-flex mr-auto">
+        <button class="btn btn-outline-primary">
+          Previus product
         </button>
       </div>
+
+        <div>
+          <button class="btn btn-outline-primary">
+            Next product
+          </button>
+        </div>
+
     </div>
   </div>
 
